[gd_scene load_steps=6 format=3 uid="uid://b6jhdtfh7summ"]

[ext_resource type="Script" uid="uid://cvls2n8bhmxsj" path="res://screen_manager.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://btjb56mwtmn4v" path="res://game_screen.gd" id="2_uu6xs"]
[ext_resource type="Texture2D" uid="uid://c2acb07wmwvvv" path="res://icon.svg" id="3_r0du0"]
[ext_resource type="Script" uid="uid://bkgvpdqg7rqwb" path="res://player.gd" id="4_cm0pq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0du0"]
size = Vector2(10, 30)

[node name="Main" type="Node2D"]

[node name="ScreenManager" type="Node2D" parent="."]
script = ExtResource("1_glv2v")

[node name="HomeScreen" type="Control" parent="ScreenManager"]
layout_mode = 3
anchors_preset = 0

[node name="Button" type="Button" parent="ScreenManager/HomeScreen"]
layout_mode = 0
offset_left = 232.0
offset_top = 375.0
offset_right = 279.0
offset_bottom = 406.0
text = "PLAY"

[node name="GameScreen" type="Control" parent="ScreenManager"]
layout_mode = 3
anchors_preset = 0
offset_left = 480.0
offset_right = 480.0
script = ExtResource("2_uu6xs")

[node name="Objects" type="Node2D" parent="ScreenManager/GameScreen"]
position = Vector2(-480, 0)

[node name="Player" type="Node2D" parent="ScreenManager/GameScreen/Objects"]
position = Vector2(480, 0)
script = ExtResource("4_cm0pq")

[node name="Area2D" type="Area2D" parent="ScreenManager/GameScreen/Objects/Player"]
position = Vector2(5, 0)
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenManager/GameScreen/Objects/Player/Area2D"]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_r0du0")

[node name="ColorRect" type="ColorRect" parent="ScreenManager/GameScreen/Objects/Player"]
offset_right = 10.0
offset_bottom = 30.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="ScreenManager/GameScreen/Objects/Player"]
position = Vector2(4.99994, 15)
scale = Vector2(0.499999, 1.5)

[node name="RayCastRight" type="RayCast2D" parent="ScreenManager/GameScreen/Objects/Player"]
modulate = Color(1, 0.2, 1, 1)
position = Vector2(10, 32)
target_position = Vector2(0, -120)
collision_mask = 0
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="ScreenManager/GameScreen/Objects/Player"]
modulate = Color(1, 0.2, 1, 1)
position = Vector2(0, 32)
target_position = Vector2(0, -120)
collision_mask = 0
collide_with_areas = true

[node name="RayCastMiddle" type="RayCast2D" parent="ScreenManager/GameScreen/Objects/Player"]
modulate = Color(1, 0.2, 1, 1)
position = Vector2(5, 32)
target_position = Vector2(0, -1500)
collision_mask = 0
collide_with_areas = true

[node name="ColorRect" type="ColorRect" parent="ScreenManager/GameScreen"]
visible = false
layout_mode = 0
offset_right = 480.0
offset_bottom = 854.0

[node name="ColorButtons" type="HBoxContainer" parent="ScreenManager/GameScreen"]
layout_mode = 0
offset_top = 726.0
offset_right = 128.0
offset_bottom = 854.0

[node name="RED" type="TextureButton" parent="ScreenManager/GameScreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("3_r0du0")

[node name="GREEN" type="TextureButton" parent="ScreenManager/GameScreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("3_r0du0")

[node name="BLUE" type="TextureButton" parent="ScreenManager/GameScreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("3_r0du0")

[node name="PURPLE" type="TextureButton" parent="ScreenManager/GameScreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("3_r0du0")

[node name="GameOverScreen" type="Control" parent="ScreenManager"]
layout_mode = 3
anchors_preset = 0
offset_left = 480.0
offset_right = 480.0

[node name="Button" type="Button" parent="ScreenManager/GameOverScreen"]
layout_mode = 0
offset_left = 200.0
offset_top = 300.0
offset_right = 288.0
offset_bottom = 331.0
text = "Play Again"

[connection signal="pressed" from="ScreenManager/HomeScreen/Button" to="ScreenManager" method="_on_play_pressed"]
[connection signal="area_entered" from="ScreenManager/GameScreen/Objects/Player/Area2D" to="ScreenManager/GameScreen" method="_on_player_area_entered"]
[connection signal="area_exited" from="ScreenManager/GameScreen/Objects/Player/Area2D" to="ScreenManager/GameScreen" method="_on_player_area_exited"]
[connection signal="screen_exited" from="ScreenManager/GameScreen/Objects/Player/VisibleOnScreenNotifier2D" to="ScreenManager/GameScreen/Objects/Player" method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="pressed" from="ScreenManager/GameOverScreen/Button" to="ScreenManager" method="_on_play_pressed"]
